--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/RecyclerArm.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/RecyclerArm.cfg
@@ -315,6 +315,32 @@ PART:NEEDS[Pathfinder]
 		runningEffectName = runningServo
 	}
 
+	MODULE:NEEDS[KIS]
+	{
+
+		name = ModuleKISPickup
+
+	        allowPartAttach = true
+
+	        allowStaticAttach = false
+
+	        allowPartStack = false
+
+	        maxDistance = 16
+
+	        grabMaxMass = 2
+	        dropSndPath = KIS/Sounds/drop
+
+	        attachPartSndPath = KIS/Sounds/attachPart
+
+	        detachPartSndPath= KIS/Sounds/detachPart
+
+	        attachStaticSndPath= KIS/Sounds/attachStatic
+
+	        detachStaticSndPath= KIS/Sounds/detachStatic
+
+	}
+
 	EFFECTS
 	{
 		attachMagnet
