--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
@@ -78,9 +78,9 @@ PART
 		runSpeed = 0.8
 	}
 
-	MODULE:NEEDS[ExtraplanetaryLaunchpads]
+	MODULE:NEEDS[Launchpad]
 	{
-		name = ExSurveyStation
+		name = ELSurveyStation
 	}
 
 	MODULE
