--- a/GameData/WildBlueIndustries/Pathfinder/Statics/LargePlatform.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Statics/LargePlatform.cfg
@@ -9,3 +9,17 @@ STATIC
     description = A way to put a base on a spot on a hill.
     cost = 0
 }
+
+WBISANDCASTLE
+{
+	name = wbiLargePlatform
+	title = Large Platform
+	mesh = LargePlatform.mu
+	volume = 100
+
+	BUILD_RESOURCE
+	{
+		name = Konkrete
+		amount = 10000
+	}
+}
