--- a/GameData/WildBlueIndustries/Buffalo/Parts/Control/RCSModule.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Control/RCSModule.cfg
@@ -344,6 +344,7 @@ PART
 		heatProduction = 133
 		fxOffset = 0, 0, 0
 		EngineType = LiquidFuel
+		shieldedCanThrust = true
 		PROPELLANT
 		{
 			name = LiquidFuel
