--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Rangeland/Rangeland.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Rangeland/Rangeland.cfg
@@ -88,7 +88,7 @@ PART
 
 	MODULE
 	{
-		name = ExTarget
+		name = ELTarget
 		TargetName = Pad
 		TargetTransform = LaunchPos
 	}
@@ -98,7 +98,7 @@ MODULE
 
 	{
 	
-		name = ExLaunchPad
+		name = ELLaunchpad
 
 		SpawnTransform = LaunchPos
 	}
