--- a/GameData/WildBlueIndustries/Buffalo/Parts/Command/GuppyCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Command/GuppyCab.cfg
@@ -40,6 +40,7 @@ PART
 	vesselType = Rover
 	CrewCapacity = 2
 	CoMOffset = 0, 0, 0.4
+	maxPressure = 6000 //600m collapse depth.
 
 	INTERNAL
 	{
@@ -58,6 +59,13 @@ PART
 		//the boat will attempt to maintain depth.
 		//Auto-depth control won't engage if the player is maneuvering the vessel.
 		verticalSpeedTrigger = 0.01
+
+	        // Override maximum pressure in kPA. Parts have a default of 4000kPA, which gives them a collapse death of 400m.
+        	// This override gives you a way to alter that collapse depth without modifying individual parts. If multiple
+	        // dive computers are found on the boat, then the highest max pressure will be used.
+		// If there is a mismatch between the part's maxPressure and the dive computer's maxPressureOverride, then both
+		// will be set to the highest value.
+		maxPressureOverride = 6000
 	}
 
 	MODULE
