--- a/GameData/WildBlueIndustries/Buffalo/Parts/Command/GuppyCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Command/GuppyCab.cfg
@@ -49,7 +49,7 @@ PART
 
 	MODULE
 	{
-		name = WBIGuppyDiveComputer
+		name = WBIDiveComputer
 
 		//Pitch angle that will trigger auto-trim. Level is 90-degrees, so +- the angle will trigger auto-trim.
 		//Auto-trim won't engage if the player is maneuvering the vessel.
