--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize1.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize1.cfg
@@ -35,89 +35,31 @@ PART
 
 	MODULE
 	{
-		name = ModuleResourceIntake
-		resourceName = IntakeAir
-		checkForOxygen = true
-		area = 0.0075
-		intakeSpeed = 10
-		intakeTransformName = Intake
-	}
+		name = WBIModuleResourceHarvester
+		HarvesterType = 2 //Atmospheric, but check this out...
 
-	MODULE
-	{
-		name = ModuleResourceHarvester
-		HarvesterType = 2 //Atmospheric
+		// List of harvest types: Planetary, Oceanic, Atmospheric, Exospheric. You can have more than one harvest type. Separate the types with a semicolon.
+		// This overrides HarversterType from the base class. There is a precedence based on vessel situation and supported harvest types:
+		// Landed: Atmospheric before Planetary
+		// Splashed: Oceanic before Planetary
+		// In space: Exospheric before Atmospheric
+		harvestTypes = Atmospheric;Oceanic
+
 		AutoShutdown = true
-		ResourceName = Atmosphere
-		ConverterName = Atmosphere Scoop
-		StartActionName = Open Atmosphere Scoop
-		StopActionName = Close Atmosphere Scoop
-		ToggleActionName = Toggle Atmosphere Scoop
+		ResourceName = Atmosphere //This is just the start...
+		ConverterName = Aero/Hydro Scoop
+		StartActionName = Open Intake
+		StopActionName = Close Intake
+		ToggleActionName = Toggle Intake
 		intakeTransformName = Intake
-		intakeSpeed = 10
-		airStaticSpeed = 10
-		AlwaysActive = true
-	}
-
-	MODULE
-	{
-		name = ModuleResourceIntake
-		resourceName = IntakeLqd
-		checkForOxygen = false
-		area = 0.0075
-		intakeSpeed = 10
-		underwaterOnly = true
-		intakeTransformName = Intake
-	}
-
-	MODULE
-	{
-		name = WBIProspector
-		ConverterName = Atmosphere Processor
-		StartActionName = Start Atmosphere Processor
-		StopActionName = Stop Atmosphere Processor
-		AutoShutdown = false
-		GeneratesHeat = false
-		guiVisible = true
-		harvestTypes = Atmospheric
-		outputsGuiName = Show Processor Outputs
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Atmosphere
-			Ratio = 0.1
-		}		
+		intakeSpeed = 20
+		airStaticSpeed = 20
 
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 5
-		}		
-	}
-
-	MODULE
-	{
-		name = WBIProspector
-		ConverterName = Liquid Distiller
-		StartActionName = Start Liquid Distiller
-		StopActionName = Stop Liquid Distiller
-		AutoShutdown = false
-		GeneratesHeat = false
-		guiVisible = true
-		harvestTypes = Oceanic
-		outputsGuiName = Show Distiller Outputs
-
-		INPUT_RESOURCE
-		{
-			ResourceName = IntakeLqd
-			Ratio = 0.1
-		}		
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 5
-		}		
+			Ratio = 3
+		}
 	}
 
 	MODULE
