--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Bulldozer.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Bulldozer.cfg
@@ -1,4 +1,4 @@
-PART
+PART:NEEDS[KerbalKonstructs]
 {
 	name = wbiBulldozer
 	module = Part
@@ -37,10 +37,22 @@ PART
 
 	MODULE
 	{
-		name = ModuleAnimateGeneric
-		animationName = Deploy
-		startEventGUIName = Stow Blade
-		endEventGUIName = Deploy Blade
-		actionGUIName = Toggle Blade
+		name = WBIStaticBuilder
+		startBuildProcessName = Start Bulldozing
+		stopBuildProcessName = Stop Bulldozing
+
+		//Tag that tells us which statics we're allowed to spawn. STATIC node must have a "tags" field.
+		tag = bulldozer
+	}
+
+	MODULE
+	{
+		name = ModuleAnimationGroup
+		deployAnimationName = Deploy
+		activeAnimationName = 
+		deployActionName = Deploy
+		retractActionName = Retract
+		toggleActionName = Toggle
+		moduleType = Bulldozer
 	}
 }
