--- a/GameData/WildBlueIndustries/Pathfinder/Statics/LargePlatform.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Statics/LargePlatform.cfg
@@ -1,25 +1,19 @@
 STATIC
 {
-    name = wbiLargePlatform
-    mesh = LargePlatform.mu
-    author = Angel-125
-    title = Large Platform
-    category = Pathfinder
-    manufacturer = Wild Blue Industries
-    description = A way to put a base on a spot on a hill.
-    cost = 0
-}
-
-WBISANDCASTLE
-{
 	name = wbiLargePlatform
-	title = Large Platform
 	mesh = LargePlatform.mu
-	volume = 100
+	author = Angel-125
+	title = Large Platform
+	category = Pathfinder
+	manufacturer = Wild Blue Industries
+	description = A way to put a base on a spot on a hill.
+	cost = 0
+	isHidden = true
+	tags = printer
 
 	BUILD_RESOURCE
 	{
-		name = Konkrete
-		amount = 10000
+		ResourceName = Konkrete
+		RequiredAmount = 15000
 	}
 }
