--- a/GameData/WildBlueIndustries/Pathfinder/Statics/MediumMound.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Statics/MediumMound.cfg
@@ -1,19 +1,19 @@
 STATIC
 {
-	name = wbiSmallPlatform
-	mesh = SmallPlatform.mu
+	name = wbiMediumMound
+	mesh = MediumMound.mu
 	author = Angel-125
-	title = Small Platform
+	title = Medium Mound
 	category = Pathfinder
 	manufacturer = Wild Blue Industries
 	description = A way to put a base on a spot on a hill.
 	cost = 0
 	isHidden = true
-	tags = printer
+	tags = bulldozer
 
 	BUILD_RESOURCE
 	{
-		ResourceName = TimeSecs //Konkrete
-		RequiredAmount = 60 //2500
+		ResourceName = TimeSecs
+		RequiredAmount = 162000
 	}
 }
