--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/WheelJack.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/WheelJack.cfg
@@ -59,6 +59,11 @@ PART
 		stagingEnabled = False
 	}
 
+	MODULE
+	{
+		name = WBISelfDestruct
+	}
+
 	DRAG_CUBE
 	{
 		cube = Default, 0.117,0.9007,0.5205, 0.117,0.9006,0.5205, 0.3092,0.7461,0.6075, 0.309,0.8261,0.5956, 0.1131,0.9021,0.5288, 0.1131,0.9055,0.535, -2.173E-05,0.01222,0, 0.5996,0.5556,0.6026
