--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Drills.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Drills.cfg
@@ -30,7 +30,7 @@
 	}
 }
 
-@PART[*]:HAS[@MODULE[ModuleResourceHarvester,!WBIDrillSwitcher]]
+@PART[*]:HAS[@MODULE[ModuleResourceHarvester]]
 {
 	@MODULE[ModuleResourceHarvester]
 	{
