--- a/GameData/WildBlueIndustries/Buffalo/Parts/Electrical/GTG250.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Electrical/GTG250.cfg
@@ -67,6 +67,7 @@ PART
 		stopEffect = stop_effect
 		flameoutEffect = flameout_effect
 		stagingEnabled = true
+		disableUnderwater = true
 
 		//Optional stuff
 		//Turbine blade transform
