--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize0.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize0.cfg
@@ -36,7 +36,10 @@ PART
 	MODULE
 	{
 		name = WBIModuleResourceHarvester
-		HarvesterType = 2 //Atmospheric, but check this out...
+
+		//HarvesterType and ResourceName will be overriden by harvestTypes. See below.
+		HarvesterType = 2 //Atmospheric
+		ResourceName = Atmosphere
 
 		// List of harvest types: Planetary, Oceanic, Atmospheric, Exospheric. You can have more than one harvest type. Separate the types with a semicolon.
 		// This overrides HarversterType from the base class. There is a precedence based on vessel situation and supported harvest types:
@@ -46,11 +49,10 @@ PART
 		harvestTypes = Atmospheric;Oceanic
 
 		AutoShutdown = true
-		ResourceName = Atmosphere //This is just the start...
 		ConverterName = Aero/Hydro Scoop
-		StartActionName = Open Intake
-		StopActionName = Close Intake
-		ToggleActionName = Toggle Intake
+		StartActionName = Start Aero/Hydro Scoop
+		StopActionName = Stop Aero/Hydro Scoop
+		ToggleActionName = Toggle Aero/Hydro Scoop
 		intakeTransformName = Intake
 		intakeSpeed = 10
 		airStaticSpeed = 10
