--- a/GameData/WildBlueIndustries/Buffalo/Parts/Command/GuppyCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Command/GuppyCab.cfg
@@ -66,6 +66,26 @@ PART
 		// If there is a mismatch between the part's maxPressure and the dive computer's maxPressureOverride, then both
 		// will be set to the highest value.
 		maxPressureOverride = 6000
+
+		showUpgradesInModuleInfo = true
+
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = wbiGuppy1
+				description__ = Increased Maximum Pressure: 8000 kPA
+				maxPressureOverride = 8000
+			}
+
+			UPGRADE
+			{
+				name__ = wbiGuppy2
+				description__ = Increased Maximum Pressure: 10000 kPA
+				maxPressureOverride = 10000
+			}
+		}
+
 	}
 
 	MODULE
@@ -244,4 +264,32 @@ PART_TIP
 {
 	name = wbiGuppyCab
 	description = The Dive Computer can keep the boat level in water as well as dive or surface the boat. But to do so, the craft must have ballast tanks. Any of the Tundra tanks can be configured with the Ballast template, and there are specialized ballast tanks as well.
+}
+
+PARTUPGRADE
+{
+	name = wbiGuppy1
+	partIcon = wbiGuppyCab
+	techRequired = fieldScience
+	entryCost = 10000
+	cost = 0 // for display only; all parts implementing this will need a PartStatsUpgradeModule with cost = this.
+	
+	title = Guppy Structural Intengrity
+	basicInfo = Max Pressure: 8000 kPA
+	manufacturer = Wild Blue Industries
+	description = Improvements to construction materials has improved maximum diving depth.
+}
+
+PARTUPGRADE
+{
+	name = wbiGuppy1
+	partIcon = wbiGuppyCab
+	techRequired = advScienceTech
+	entryCost = 10000
+	cost = 0 // for display only; all parts implementing this will need a PartStatsUpgradeModule with cost = this.
+	
+	title = Guppy Advanced Structural Integrity
+	basicInfo = Max Pressure: 10000 kPA
+	manufacturer = Wild Blue Industries
+	description = Improvements to construction materials has improved maximum diving depth.
 }
