--- a/GameData/WildBlueIndustries/Buffalo/Parts/Wheel/M1A2Grizzly.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Wheel/M1A2Grizzly.cfg
@@ -44,7 +44,7 @@ PART
 
 		// setting this to true will override the radius and center parameters
 		FitWheelColliderToMesh = False		
-		radius = 0.4
+		radius = 0.3985
 		center = 0,0,0
 		mass = 1
 		groundHeightOffset = 0.0
@@ -58,8 +58,10 @@ PART
 		baseModuleIndex = 0
 		suspensionTransformName = suspensionTraverse
 		
-		suspensionDistance = 0.3
+		suspensionDistance = 0.2
+		suspensionOffset = 0.1
 		targetPosition = 0.5			
+
 		springRatio = 7.0
 		damperRatio = 1.0
 	}	
