--- a/GameData/WildBlueIndustries/Pathfinder/Templates/CRP.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/CRP.cfg
@@ -12,4 +12,7 @@ WBIPLAYMODEEXT
 
 	//Path
 	templatePath = WildBlueIndustries/Pathfinder/Templates/CRP
+
+	//Name of the mod that supports the play mode.
+	modName = Pathfinder
 }
