--- a/GameData/WildBlueIndustries/Buffalo/Templates/ClassicStock.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Templates/ClassicStock.cfg
@@ -12,4 +12,7 @@ WBIPLAYMODEEXT
 
 	//Path
 	templatePath = WildBlueIndustries/Buffalo/Templates/ClassicStock
+
+	//Name of the mod that supports the play mode.
+	modName = Buffalo
 }
