--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Pristine.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Pristine.cfg
@@ -12,4 +12,7 @@ WBIPLAYMODEEXT
 
 	//Path
 	templatePath = WildBlueIndustries/Pathfinder/Templates/Pristine
+
+	//Name of the mod that supports the play mode.
+	modName = Pathfinder
 }
