--- a/GameData/WildBlueIndustries/Pathfinder/DeprecatedParts/ranchHouse.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/DeprecatedParts/ranchHouse.cfg
@@ -65,9 +65,10 @@ PART
 	}
 
 	TechRequired = composites
-	entryCost = 3800
+	TechHidden = True
+	entryCost = 0
 	cost = 800
-	category = Utility
+	category = none
 	subcategory = 0
 	title = Hogan
 	manufacturer = Wild Blue Industries
@@ -90,7 +91,6 @@ PART
 	stackSymmetry = 7
 	CrewCapacity = 32
 //	CoMOffset = 0, 0, 6.225
-	TechHidden = True
 
 	INTERNAL
 	{
