--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
@@ -87,6 +87,12 @@ PART
 		ExperienceEffect = DrillSkill
 		EfficiencyBonus = 1
 		GeneratesHeat = false
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 15
+		}
 	}
 
 	MODULE:NEEDS[Workshop]
