--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castillo.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castillo.cfg
@@ -228,12 +228,11 @@ PART
 		traitsAllowedToConvert = Tourist
 
 		//Kerbals are restricted from converting to these traits. Don't set this if you want no restrictions. Separate traits by semicolon.
-		blacklistedTraits = Kolonist;Miner;Technician;Mechanic;Biologist;Farmer;Medic;Quartermaster;Scout
+		blacklistedTraits = Kolonist;Miner;Technician;Mechanic;Biologist;Farmer;Medic;Quartermaster;Scout;Tourist
 
 		//After training the kerbal, reset his/her experience.
 		resetExperience = true
 	}
-
 
 	//This module is needed in order to generate colony contracts to the base.
 	MODULE
