--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
@@ -27,6 +27,7 @@ PART
 
 	// --- node definitions ---
 	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
+	node_stack_KISMount = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
 	node_stack_back = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 2
 	node_stack_left = -1.5, 0.0, -3.126, -1, 0, 0, 2
 	node_stack_right = 1.5, 0.0, -3.126, 1, 0, 0, 2
@@ -135,10 +136,8 @@ PART
 		//Determines whether or not the part is inflatable
 		isInflatable = True
 
-		//These colliders need to be switched between layer 26 (WheelCollidersIgnore) and 0 (default). When deflated, they're on
-		//layer 26. When inflated, they're on layer 0. That way wheels ignore them when deflated, and you can transfer crew into the
-		//module when inflated.
-		//inflatableColliders = LabCollider;TunnelCollider001;TunnelCollider002;TunnelCollider003;Collider2
+		//Lets you reconfigure the part when deflated.
+		canConfigureWhenDeflated = true
 
 		//Name of inflatable animation
 		animationName = Deploy
