--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_CLS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_CLS.cfg
@@ -1,4 +1,4 @@
-@PART[wbiWalkway1X,wbiWalkway2X,wbiCastilloAdapter,wbiArcReactor,wbiCastilloFactory,wbiCastilloObservatory,wbiStorageDepot,wbiGroundStation,wbiRanchHouse2,wbiRanchHouse,WBI_Chuckwagon,WBI_Hacienda,WBI_Conestoga,WBI_Conestoga2,WBI_DocSciLab,WBI_Ponderosa,WBI_Ponderosa2,WBI_Homestead,WBI_Stockyard250,WBI_Stockyard375,WBI_Switcback,WBI_Switcback2,WBI_TunnelExtender,WBI_Mineshaft,WBI_Conestoga,WBI_MBM,WBI_Mineshaft]:HAS[!MODULE[ModuleConnectedLivingSpace]]:NEEDS[ConnectedLivingSpace] 
+@PART[wbiDrillingRig,wbiWalkway1X,wbiWalkway2X,wbiCastilloAdapter,wbiArcReactor,wbiCastilloFactory,wbiCastilloObservatory,wbiStorageDepot,wbiGroundStation,wbiRanchHouse2,wbiRanchHouse,WBI_Chuckwagon,WBI_Hacienda,WBI_Conestoga,WBI_Conestoga2,WBI_DocSciLab,WBI_Ponderosa,WBI_Ponderosa2,WBI_Homestead,WBI_Stockyard250,WBI_Stockyard375,WBI_Switcback,WBI_Switcback2,WBI_TunnelExtender,WBI_Mineshaft,WBI_Conestoga,WBI_MBM,WBI_Mineshaft]:HAS[!MODULE[ModuleConnectedLivingSpace]]:NEEDS[ConnectedLivingSpace] 
 {
     MODULE
     {
