--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
@@ -9,6 +9,7 @@ PART
 		model = WildBlueIndustries/Pathfinder/Assets/Ponderosa2
 	}
 	rescaleFactor = 1
+	node_stack_KISMount = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
 	node_stack_back = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 2
 	node_stack_front = 0, 0.0, -5.0, 0, 0, -1, 2
 	node_stack_left = -1.93, 0.0, -3.071, -1, 0, 0, 2
@@ -138,6 +139,9 @@ PART
 
 		//Determines if the part can be reconfigured out in the field.
 		fieldReconfigurable = true
+
+		//Lets you reconfigure the part when deflated.
+		canConfigureWhenDeflated = true
 
 		//name of the template nodes to use
 		templateNodes = PATH_HABITATION
