--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
@@ -27,6 +27,7 @@ PART
 
 	// --- node definitions ---
 	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
+	node_stack_KISMount = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
 	node_stack_back = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 2
 	node_stack_front = 0, 0.0, -5.064, 0, 0, -1, 2
 	node_stack_left = -1.782, 0.0, -3.282, -1, 0, 0, 2
@@ -91,6 +92,9 @@ PART
 
 		//Determines if the module allows in-field reconfiguring
 		fieldReconfigurable = True
+
+		//Lets you reconfigure the part when deflated.
+		canConfigureWhenDeflated = true
 
 		//Require a confirmation click before changing resources
 		confirmResourceSwitch = True
