--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
@@ -26,6 +26,7 @@ PART
 
 	// --- node definitions ---
 	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
+	node_stack_KISMount = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
 	node_stack_back = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 2
 	node_stack_front = 0, 0.0, -8.677, 0, 0, -1, 2
 	node_stack_left = -2.08, 0.0, -3.533, -1, 0, 0, 2
@@ -132,10 +133,8 @@ PART
 		//Determines whether or not the part is inflatable
 		isInflatable = True
 		
-		//These colliders need to be switched between layer 26 (WheelCollidersIgnore) and 0 (default). When deflated, they're on
-		//layer 26. When inflated, they're on layer 0. That way wheels ignore them when deflated, and you can transfer crew into the
-		//module when inflated.
-		//inflatableColliders = BodyCollider;TunnelCollider001;TunnelCollider002;TunnelCollider003;TunnelCollider006;TunnelCollider007
+		//Lets you reconfigure the part when deflated.
+		canConfigureWhenDeflated = true
 
 		//Name of inflatable animation
 		animationName = Deploy
