--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/ISRU.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/ISRU.cfg
@@ -40,30 +40,43 @@ PART
 
 	MODULE
 	{
-		name = WBIMultiConverter
-		enableLogging = True
+		name = WBIOmniConverter
 
-		//Determines if the module allows in-field reconfiguring
-		fieldReconfigurable = True
+		//Name of the button displayed in the OpsManager
+		managedName = OmniConverter
 
-		//Require a confirmation click before changing resources
-		confirmResourceSwitch = True
+		//Name of the templates that the omni converter can use
+		templateNodes = OMNICONVERTER
 
-		//Determines whether or not to show the context menu GUI
-		showGUI = True
+		//Tags to further refine the allowed converters
+//		templateTags =
 
-		//Short name of the default module template.
-		//This is used when selecting the part in the editor.
-		//User will then right-click on the module to change its type.
-		defaultTemplate = LFO
+		//Base efficiency based on a 1000-liter converter volume.
+		//Smaller converters have lower efficiency while bigger converters have larger efficiencies.
+		//Example: a 500-liter converter has a BaseEfficiency of 0.5
+		BaseEfficiency = 2.0
 
-		//name of the template nodes to use
-		templateNodes = BUFF_ISRU
+		//Reconfigure skill
+		reconfigureSkill = ConverterSkill
 
-		//Some containers don't hold as much resources as the template specifies, while others hold more.
-		//Since the resource templates specify base amounts, the capacity factor specifies a multiplier to
-		//factor into the resource amounts.
-		capacityFactor = 1.0
+		//Resource required to configure the converter
+		requiredResource = Equipment
+
+		//Amount of the required resource needed to reconfigure the converter
+		requiredAmount = 100
+
+		//Standard ModuleResourceConverter stuff
+		ConverterName = OmniConverter
+		StartActionName = Start Converter
+		StopActionName = Stop Converter
+		AutoShutdown = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		ExperienceEffect = ConverterSkill
+		EfficiencyBonus = 1
+
+		showOpsView = true
 	}	
 
 	MODULE:NEEDS[BARIS]
