--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
@@ -156,5 +156,11 @@ PART
 		usageReqMaskInternal = 1
 		usageReqMaskExternal = 8
 	}
+
+	MODULE:NEEDS[KIS]
+	{
+		name = ModuleKISItem
+		volumeOverride = 250
+	}
 	
 }
