relink decals and updat resource dec

--- a/GameData/WildBlueIndustries/Pathfinder/Templates/ClassicStock/SunburnLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/ClassicStock/SunburnLab.cfg
@@ -4,13 +4,13 @@ PATH_SCIENCE
 	name = Sunburn
 	title = Sunburn Fusion Lab
 	shortName = Sunburn Lab
-	description = The Sunburn lab is configured to produce fusion pellets for fusion reactors and engines as well as coolan for radiators.
+	description = The Sunburn lab is configured to produce fusion pellets for fusion reactors and engines as well as Ccoolant for radiators and Glykerol fo cryosleep.
 	mass = 3
 	requiredResource = Equipment
 	requiredAmount = 1200
 	reconfigureSkill = ConverterSkill
-	logoPanel = WildBlueIndustries/Pathfinder/Decals/Sunburn
-	glowPanel = WildBlueIndustries/Pathfinder/Decals/SunburnGlow
+	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/Factory_Fusion
+	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/Factory_FusionGlow
 	toolTip = Be sure to bring your sunscreen, the Sunburn lab is hot stuff! Create fusion pellets in the lab, and/or coolant for your radiators.
 	toolTipTitle = Your First Sunburn Lab!
 	templateTags = orbitalWorkshop;moleLab;dsevLab;airshipLab
