--- a/GameData/WildBlueIndustries/Pathfinder/Resources/GoldStrikeResources.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Resources/GoldStrikeResources.cfg
@@ -70,9 +70,9 @@ STORAGE_TEMPLATE
 	author = Angel-125
 	name = Aurum
 	shortName = Aurum
-	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/RareMetals
-	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/RareMetalsGlow
-	description = This kit stores Aurum, a shiny metal with a gold sheen.
+	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/Aurum
+	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/AurumGlow
+	description = This kit stores Aurum, an exceptionally valuable metal with a yellow color. More precious than PreciousMetals, Aurum cannot be found except via "GoldStrike," a game of chance which requires a mobile prospector vessel, crew, and probably Snacks!
 	templateTags = stowage
 
 	RESOURCE
