misc MM updates
* fix buckboard utility template patch
* legacy/remnant USI LS check

--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_WBT.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_WBT.cfg
@@ -2,10 +2,10 @@
 {
 	@MODULE[WBIConvertibleStorage]
 	{
-		@templateNodes = BATTERY;STORAGE_TEMPLATE
+		@templateNodes = BATTERY;STORAGE_TEMPLATE;BUCKSCI1
 	}
 
-	MODULE:NEEDS[Pathfinder]
+	MODULE
 	{
 		name = WBIResourceDistributor
 	}
@@ -15,10 +15,10 @@
 {
 	@MODULE[WBIConvertibleStorage]
 	{
-		@templateNodes = BUCKBOARD_GENERATOR2;STORAGE_TEMPLATE
+		@templateNodes = STORAGE_TEMPLATE;BUCKBOARD_GENERATOR2;BUCKSCI2
 	}
 
-	MODULE:NEEDS[Pathfinder]
+	MODULE
 	{
 		name = WBIResourceDistributor
 	}
@@ -28,10 +28,18 @@
 {
 	@MODULE[WBIConvertibleStorage]
 	{
-		@templateNodes = BUCKBOARD_GENERATOR3;STORAGE_TEMPLATE
+		@templateNodes = STORAGE_TEMPLATE;BUCKBOARD_GENERATOR3;BUCKSCI3
 	}
 
-	MODULE:NEEDS[Pathfinder]
+	MODULE
+	{
+		name = WBIResourceDistributor
+	}
+}
+
+@PART[WBI_Buckboard4]:NEEDS[Pathfinder]
+{
+	MODULE
 	{
 		name = WBIResourceDistributor
 	}
@@ -49,8 +57,8 @@ BUCKBOARD_GENERATOR2
 	requiredResource = Equipment
 	requiredAmount = 60
 	reconfigureSkill = ConverterSkill
-	logoPanel = WildBlueIndustries/Pathfinder/Decals/Generator
-	glowPanel = WildBlueIndustries/Pathfinder/Decals/Generator
+	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/FuelCell
+	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/FuelCellGlow
 	toolTip = This diesel-electric generator is powered by ore.
 	toolTipTitle = Your First Ore-powered generator!
 
@@ -132,8 +140,8 @@ BUCKBOARD_GENERATOR3
 	requiredResource = Equipment
 	requiredAmount = 100
 	reconfigureSkill = ConverterSkill
-	logoPanel = WildBlueIndustries/Pathfinder/Decals/Generator
-	glowPanel = WildBlueIndustries/Pathfinder/Decals/Generator
+	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/FuelCell
+	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/FuelCellGlow
 	toolTip = This diesel-electric generator is powered by ore.
 	toolTipTitle = Your First Ore-powered generator!
 
