--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
@@ -186,7 +186,7 @@ PART
 		resourcesToKeep:NEEDS[TacLifeSupport] = Food;Oxygen;Water;CarbonDioxide;Waste;WasteWater
 
 		//USI-LS
-		resourcesToKeep:NEEDS[USILifeSupport] = Supplies;Mulch;ReplacementParts
+		resourcesToKeep:NEEDS[USILifeSupport] = Supplies;Mulch;Machinery;ColonySupplies
 
 	}
 
