--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/drillingRig.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/drillingRig.cfg
@@ -98,11 +98,11 @@ PART
 		ImpactTransform = ImpactTransform
 		ImpactRange = 15
 		AutoShutdown = true
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		ExperienceEffect = DrillSkill
-		EfficiencyBonus = 1
+		UseSpecialistBonus = false
+//		SpecialistEfficiencyFactor = 0.2
+//		SpecialistBonusBase = 0.05
+//		ExperienceEffect = DrillSkill
+//		EfficiencyBonus = 6
 		GeneratesHeat = false
 
 		INPUT_RESOURCE
@@ -230,6 +230,12 @@ PART
 		quality = 50
 		mtbf = 2556
 		showGui = false
+	}
+
+	MODULE
+	{
+		name = WBIEfficiencyMonitor
+		efficiencyType = industry
 	}
 
 	RESOURCE
