New KAs compatibility

--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Pipeline2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Pipeline2.cfg
@@ -78,15 +78,36 @@ PART
 	{
 		name = ModuleKISItemEvaTweaker
 		volumeOverride = 1100
-		editorItemsCategory = false
 		carriable = true
-		equipMode = part
+		equipMode = model
 		equipSlot = jetpack
 		equipBoneName = aliasJetpack
-		equipPos = 0,-0.2,-0.45
-		equipDir = 0,0,0
+		equipPos = (0,-0.2,-0.45)
+		equipDir = (0,0,0)
 		runSpeed = 0.8
 		allowPartAttach = 1
+	}
+
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdStrut
+		linkTypeDisplayName = #kasLOC_99003 // #kasLOC_99003 = Pipe-100
+		attachNodeName = wbiKas0
+		allowCoupling = true
+	}
+
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdHose
+		linkTypeDisplayName = #kasLOC_99005 // #kasLOC_99005 = Hose-70
+		attachNodeName = wbiKas0
+		allowCoupling = true
 	}
 
 	MODULE:NEEDS[KIS]
