--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Rangeland2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Rangeland2.cfg
@@ -26,6 +26,13 @@ PART
 		transform = Node001
 	}
 
+	NODE
+	{
+		name = wbiKas0
+		transform = plugPort
+		size = 0
+	}
+
 	TechRequired = advConstruction
 	entryCost = 23800
 	cost = 1800
@@ -65,6 +72,28 @@ PART
 		equipDir = 0,0,0
 		runSpeed = 0.8
 		allowPartAttach = 1
+	}
+
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdStrut
+		linkTypeDisplayName = #kasLOC_99003 // #kasLOC_99003 = Pipe-100
+		attachNodeName = wbiKas0
+		allowCoupling = true
+	}
+
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdHose
+		linkTypeDisplayName = #kasLOC_99005 // #kasLOC_99005 = Hose-70
+		attachNodeName = wbiKas0
+		allowCoupling = true
 	}
 
 	MODULE
