--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Saddle.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Saddle.cfg
@@ -17,6 +17,12 @@ PART
 		transform = node1
 		size = 0
 	}
+	NODE
+	{
+		name = wbiKas0
+		transform = plugPort
+		size = 0
+	}
 
 	TechRequired = spaceExploration
 	entryCost = 3200
@@ -50,6 +56,28 @@ PART
 		allowPartAttach = AllowedWithKisTool
 		allowStaticAttach = AllowedAlways
 		staticAttachBreakForce = 4000
+	}
+
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdStrut
+		linkTypeDisplayName = #kasLOC_99003 // #kasLOC_99003 = Pipe-100
+		attachNodeName = wbiKas0
+		allowCoupling = true
+	}
+
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdHose
+		linkTypeDisplayName = #kasLOC_99005 // #kasLOC_99005 = Hose-70
+		attachNodeName = wbiKas0
+		allowCoupling = true
 	}
 
 	MODULE:NEEDS[KIS]
