--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback.cfg
@@ -16,6 +16,12 @@ PART
 	node_stack_front = 0, 0.5061848, -0.572570, 0, 0, -1, 2
 	node_stack_top = 0, 1.04, 0, 0, 1, 0, 2
 	node_attach = 0, 0, 0, 0, -1, 0, 2
+	NODE
+	{
+		name = wbiKas0
+		transform = plugPort
+		size = 0
+	}
 
 	TechRequired = specializedConstruction
 	category = Structural
