--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback2.cfg
@@ -37,6 +37,12 @@ PART
 		name = Back
 		transform = nodeBack
 	}
+	NODE
+	{
+		name = wbiKas0
+		transform = plugPort
+		size = 0
+	}
 	TechRequired = specializedConstruction
 	entryCost = 3800
 	cost = 1800
@@ -94,13 +100,12 @@ PART
 	{
 		name = ModuleKISItemEvaTweaker
 		volumeOverride = 500
-		editorItemsCategory = false
 		carriable = true
-		equipMode = part
+		equipMode = model
 		equipSlot = jetpack
 		equipBoneName = aliasJetpack
-		equipPos = 0,0.0,-0.55
-		equipDir = 0,0,0
+		equipPos = (0,0.0,-0.55)
+		equipDir = (0,0,0)
 		runSpeed = 0.8
 		allowPartAttach = AllowedWithKisTool
 		allowStaticAttach = AllowedAlways
@@ -132,6 +137,28 @@ PART
 		isBreakable = false
 		resourceName = ElectricCharge
 		chargeRate = .7
+	}
+
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdStrut
+		linkTypeDisplayName = #kasLOC_99003 // #kasLOC_99003 = Pipe-100
+		attachNodeName = wbiKas0
+		allowCoupling = true
+	}
+
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdHose
+		linkTypeDisplayName = #kasLOC_99005 // #kasLOC_99005 = Hose-70
+		attachNodeName = wbiKas0
+		allowCoupling = true
 	}
 
 	MODULE
