--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Gaslight.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Gaslight.cfg
@@ -30,6 +30,12 @@ PART
 		transform = node3
 		size = 0
 	}
+	NODE
+	{
+		name = wbiKas0
+		transform = plugPort1
+		size = 0
+	}
 
 	TechRequired = generalConstruction
 	entryCost = 3200
@@ -54,6 +60,28 @@ PART
 	breakingForce = 2000
 	breakingTorque = 2000
 	bulkheadProfiles = size1, srf
+
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdStrut
+		linkTypeDisplayName = #kasLOC_99003 // #kasLOC_99003 = Pipe-100
+		attachNodeName = wbiKas0
+		allowCoupling = true
+	}
+
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdHose
+		linkTypeDisplayName = #kasLOC_99005 // #kasLOC_99005 = Hose-70
+		attachNodeName = wbiKas0
+		allowCoupling = true
+	}
 
 	MODULE:NEEDS[KIS]
 	{
