--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Sombrero.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Sombrero.cfg
@@ -10,7 +10,6 @@ PART
 	}
 	rescaleFactor = 1
 	node_stack_bottom = 0, 0, 0, 0, -1, 0, 1
-	node_attach = 0, 0, 0, 0, -1, 0, 1
 	NODE
 	{
 		name = Plug1
@@ -27,6 +26,12 @@ PART
 	{
 		name = Plug3
 		transform = node3
+		size = 0
+	}
+	NODE
+	{
+		name = wbiKas0
+		transform = plugPort1
 		size = 0
 	}
 
@@ -87,13 +92,35 @@ PART
 		trackingSpeed = 0.25		
 	}
 
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdStrut
+		linkTypeDisplayName = #kasLOC_99003 // #kasLOC_99003 = Pipe-100
+		attachNodeName = wbiKas0
+		allowCoupling = true
+	}
+
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdHose
+		linkTypeDisplayName = #kasLOC_99005 // #kasLOC_99005 = Hose-70
+		attachNodeName = wbiKas0
+		allowCoupling = true
+	}
+
 	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItemEvaTweaker
 		volumeOverride = 400
 		carriable = true
-		equipPos = 0,-0.1,-0.15
-		equipMode = part
+		equipPos = (0,-0.1,-0.15)
+		equipMode = model
 		equipSlot = jetpack
 		equipBoneName = aliasJetpack
 		stackable = true
