--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
@@ -29,6 +29,12 @@ PART
 	node_attach = 0, 0, 0, 0, -1, 0, 1
 	node_stack_mount = 0, 0, 0, 0, 1, 0, 1
 	node_stack_bottom = 0, 0, 0, 0, -1, 0, 1
+	NODE
+	{
+		name = wbiKas0
+		transform = plugPort
+		size = 0
+	}
 
 	// --- editor parameters ---
 	TechRequired = advConstruction
@@ -67,13 +73,12 @@ PART
 	{
 		name = ModuleKISItemEvaTweaker
 		volumeOverride = 950
-		editorItemsCategory = false
 		carriable = true
-		equipMode = part
+		equipMode = model
 		equipSlot = jetpack
-		equipBoneName = aliasJetpack
-		equipPos = 0,0.45,0
-		equipDir = 0,0,0
+		equipBoneName = alaisJetpack
+		equipPos = (0,0.45,0)
+		equipDir = (0,0,0)
 		runSpeed = 0.8
 	}
 
@@ -111,6 +116,28 @@ PART
 	MODULE
 	{
 		name = WBISpyglassOpsView
+	}
+
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdStrut
+		linkTypeDisplayName = #kasLOC_99003 // #kasLOC_99003 = Pipe-100
+		attachNodeName = wbiKas0
+		allowCoupling = true
+	}
+
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdHose
+		linkTypeDisplayName = #kasLOC_99005 // #kasLOC_99005 = Hose-70
+		attachNodeName = wbiKas0
+		allowCoupling = true
 	}
 
 	MODULE
