--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Telegraph.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Telegraph.cfg
@@ -29,6 +29,12 @@ PART
 		transform = node3
 		size = 0
 	}
+	NODE
+	{
+		name = wbiKas0
+		transform = plugPort1
+		size = 0
+	}
 
 	TechRequired = electronics
 	entryCost = 4600
@@ -77,16 +83,37 @@ PART
 		DeployFxModules = 0
 	}
 
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdStrut
+		linkTypeDisplayName = #kasLOC_99003 // #kasLOC_99003 = Pipe-100
+		attachNodeName = wbiKas0
+		allowCoupling = true
+	}
+
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdHose
+		linkTypeDisplayName = #kasLOC_99005 // #kasLOC_99005 = Hose-70
+		attachNodeName = wbiKas0
+		allowCoupling = true
+	}
+
 	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItemEvaTweaker
 		volumeOverride = 300
-		equipPos = 0,-0.1,-0.15
+		equipPos = (0,-0.1,-0.15)
 		carriable = true
-		equipMode = part
+		equipMode = model
 		equipSlot = jetpack
 		equipBoneName = aliasJetpack
-		stackable = true
 		allowPartAttach = AllowedWithKisTool
 		allowStaticAttach = AllowedAlways
 		staticAttachBreakForce = 2000
