--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/TrailerHitch2.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/TrailerHitch2.cfg
@@ -63,6 +63,28 @@ PART
 		name = WBIForceDock
 	}
 
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdStrut
+		linkTypeDisplayName = #kasLOC_99003 // #kasLOC_99003 = Pipe-100
+		attachNodeName = front
+		allowCoupling = true
+	}
+
+	MODULE:NEEDS[KAS]
+	{
+		name = KASLinkTargetBase
+
+		// AbstractLinkPeer
+		linkType = MdHose
+		linkTypeDisplayName = #kasLOC_99005 // #kasLOC_99005 = Hose-70
+		attachNodeName = front
+		allowCoupling = true
+	}
+
 	DRAG_CUBE
 	{
 		cube = A, 0.1119,0.8139,0.4676, 0.1119,0.8146,0.7671, 0.2631,0.8442,0.9339, 0.2631,0.8534,0.8475, 0.2898,0.8115,0.5754, 0.2898,0.9174,0.6096, -2.98E-08,-0.1204,0.1042, 0.846,0.8491,0.5264
